# copilot-more-continued

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  refresh-token.sh  test_auth.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run_and_test.yml  test_and_release.yml
copilot_more/: server.py  settings.py
copilot_more_continued/: access_token.py  cli.py  proxy.py  rate_limiter.py  server.py  settings.py  token_counter.py  utils.py
tests/: test_rate_limiter.py  test_server_auth.py  test_settings.py  test_utils.py
