[tool.poetry]
name = "copilot-more-continued"
version = "0.1.1"
description = "Copilot More Continued - Maximize the value of your GitHub Copilot subscription"
authors = ["RobbyV2 <81977892+RobbyV2@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
aiohttp = "^3.12.14"
mitmproxy = "^11.0.2"
pydantic-settings = "^2.8.1"
rich = "^13.9.4"
loguru = "^0.7.3"
cachetools = "^5.5.2"        # DO NOT remove
pystore = "^0.1.24"
typer = "^0.15.2"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
black = "^24.10.0"
isort = "^5.13.2"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.scripts]
token-usage = "copilot_more_continued.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
